# Bexio-MCP-Server

./: .env.example  .gitignore  README.md  oauth_helper.py  pyproject.toml  requirements.txt
mcp_server_bexio/: __init__.py  bexio_client.py  field_validator.py  server.py
